--- a/app/templates/tutor/tutor_bio_edit.html
+++ b/app/templates/tutor/tutor_bio_edit.html
@@ -5,15 +5,14 @@
 <!-- Author: Hita Gupta                                          -->
 <!-- =========================================================== -->
  
-<div class="modal fade" id="tutorBioEditModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+<div class="modal fade" id="tutorBioEditModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="modelLabel">Edit Bio</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <h5 class="modal-title" id="modalLabel">Edit Bio</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
+            
             <div class="modal-body">
                 <form action="/tutor_bio_edit_submit" method="post">
                     <label for="bio">Bio:</label>
