--- a/app/templates/tutor/tutor_bio_edit.html
+++ b/app/templates/tutor/tutor_bio_edit.html
@@ -15,12 +15,12 @@
             
             <div class="modal-body">
                 <form action="/tutor_bio_edit_submit" method="post">
-                    <label for="bio">Bio:</label>
+                    <label for="bio">Your bio, shown to students who are booking appointments:</label>
                     <br>
                     <input type="textarea" name="bio" value="{{bio}}">
                     <br>
                     <input type="hidden" name="tutor_netid" value="{{tutor_netid}}">
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Edit Bio">
                 </form>       
             </div>
         </div>
