--- a/app/templates/tutor/tutor_bio_edit.html
+++ b/app/templates/tutor/tutor_bio_edit.html
@@ -15,12 +15,16 @@
             
             <div class="modal-body">
                 <form action="/tutor_bio_edit_submit" method="post">
+                    <div class="mb-1">
                     <label for="bio">Your bio, shown to students who are booking appointments:</label>
+                    </div>
                     <br>
                     <input type="textarea" name="bio" value="{{bio}}">
                     <br>
+                    <div class="mt-3">
                     <input type="hidden" name="tutor_netid" value="{{tutor_netid}}">
                     <input type="submit" value="Edit Bio">
+                    </div>
                 </form>       
             </div>
         </div>
