--- a/app/templates/tutor/tutor_bio_edit.html
+++ b/app/templates/tutor/tutor_bio_edit.html
@@ -19,7 +19,7 @@
                     <label for="bio">Your bio, shown to students who are booking appointments:</label>
                     </div>
                     <br>
-                    <input type="textarea" name="bio" value="{{bio}}">
+                    <textarea name="bio" rows="5" cols="40">{{bio}}</textarea>
                     <br>
                     <div class="mt-3">
                     <input type="hidden" name="tutor_netid" value="{{tutor_netid}}">
